[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Head.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Body.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D" index="0"]

position = Vector2( 40, 30 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Head" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 76, -10 )

[node name="Bodies" type="Node2D" parent="." index="1"]

editor/display_folded = true

[node name="Body3" parent="Bodies" index="0" instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( -20, -10 )

[node name="Body2" parent="Bodies" index="1" instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( 12, -10 )

[node name="Body" parent="Bodies" index="2" instance=ExtResource( 3 )]

position = Vector2( 44, -10 )

[node name="ScoreLabel" type="Label" parent="." index="2"]

modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 520.0
margin_top = -20.0
margin_right = 520.0
margin_bottom = -6.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Score: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="GameOverLabel" type="Label" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 190.0
margin_right = 316.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "GAME OVER"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RestartButton" type="Button" parent="GameOverLabel" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 20.0
margin_right = 70.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Restart"
flat = false
align = 1
_sections_unfolded = [ "Pause" ]

[connection signal="pressed" from="GameOverLabel/RestartButton" to="." method="_on_RestartButton_pressed"]

[connection signal="toggled" from="GameOverLabel/RestartButton" to="." method="_on_RestartButton_toggled"]


